launch/splash screen added

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,7 +8,7 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
     <style name="AppTheme.Launch">
-        <item name="android:windowBackground">@drawable/img</item>
+        <item name="android:windowBackground">@mipmap/ic_launcher_foreground</item>
     </style>
 
 
